--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack -p 9002",
-    "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
-    "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "pocketbase": "./scripts/start-pocketbase.sh",
+    "dev:full": "concurrently \"npm run pocketbase\" \"npm run dev\"",
+    "screenshots": "node scripts/capture-screenshots.js",
+    "docs:dev": "fumadocs-mdx dev",
+    "docs:build": "node scripts/build-docs.js",
+    "docs:preview": "node scripts/preview-docs.js",
+    "test-docs": "./scripts/test-docs-build.sh"
   },
   "dependencies": {
-    "@genkit-ai/googleai": "^1.8.0",
-    "@genkit-ai/next": "^1.8.0",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -35,17 +38,18 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "better-auth": "^1.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
-    "firebase": "^11.8.1",
-    "genkit": "^1.8.0",
+    "fumadocs-mdx": "^11.7.3",
     "js-yaml": "^4.1.0",
     "lucide-react": "^0.475.0",
     "mime-types": "^2.1.35",
     "next": "15.3.3",
     "patch-package": "^8.0.0",
+    "pocketbase": "^0.26.2",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -68,8 +72,9 @@
     "@types/react-dom": "^18",
     "@types/swagger-ui-react": "^5.0.0",
     "@types/uuid": "^9.0.8",
-    "genkit-cli": "^1.8.0",
+    "concurrently": "^9.2.0",
     "postcss": "^8",
+    "puppeteer": "^24.16.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
