--- a/package.json
+++ b/package.json
@@ -10,11 +10,9 @@
     "typecheck": "tsc --noEmit",
     "pocketbase": "./scripts/start-pocketbase.sh",
     "dev:full": "concurrently \"npm run pocketbase\" \"npm run dev\"",
-    "screenshots": "node scripts/capture-screenshots.js",
     "docs:dev": "fumadocs-mdx dev",
-    "docs:build": "node scripts/build-docs.js",
-    "docs:preview": "node scripts/preview-docs.js",
-    "test-docs": "./scripts/test-docs-build.sh"
+    "docs:build": "node scripts/build-docs-simple.js",
+    "docs:preview": "fumadocs-mdx preview"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
@@ -74,7 +72,6 @@
     "@types/uuid": "^9.0.8",
     "concurrently": "^9.2.0",
     "postcss": "^8",
-    "puppeteer": "^24.16.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
