--- a/.github/workflows/deploy-documentation.yml
+++ b/.github/workflows/deploy-documentation.yml
@@ -37,6 +37,9 @@ jobs:
       - name: Build documentation
         run: npm run docs:build
 
+      - name: List build directory
+        run: ls -la .fumadocs/
+
       - name: Upload build artifact
         uses: actions/upload-pages-artifact@v3
         with:
