feat: Implement hybrid AI router with intelligent provider selection
- Add AI router with multiple provider support (Ollama, OpenAI, Gemini, Anthropic, Rule-based)
- Implement intelligent fallback logic with priority-based provider selection
- Add comprehensive provider management with database persistence
- Create AI Providers management page with real-time statistics
- Update threat detection actions to use hybrid AI analysis
- Add provider performance tracking and analysis logging
- Implement automatic provider availability detection
- Add test script for AI router functionality
- Update sidebar navigation with AI Providers page
- Fix rule-based analysis integration and unique constraint issues

The system now intelligently routes analysis requests through:
1. Ollama (local) - if available
2. OpenAI - if API key configured
3. Gemini - if API key configured
4. Anthropic - if API key configured
5. Rule-based - as final fallback

This provides maximum reliability with best available AI capabilities.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test": "bun test",
     "test:watch": "bun test --watch",
     "test:coverage": "bun test --coverage",
+    "test:ai-router": "bun run --bun scripts/test-ai-router.ts",
     "db:seed": "bun run --bun scripts/seed-database.ts",
     "db:migrate": "bun run --bun scripts/migrate-database.ts",
     "api:generate": "bun run --bun scripts/generate-api-client.ts",
