--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,39 +45,13 @@ jobs:
         path: .next/
         retention-days: 1
 
-  # Build documentation
-  build-docs:
-    runs-on: ubuntu-latest
-    
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-      
-    - name: Setup Bun
-      uses: oven-sh/setup-bun@v1
-      with:
-        bun-version: latest
-        
-    - name: Install dependencies
-      run: bun install
-      
-    - name: Build documentation
-      run: bun run docs:build
-      
-    - name: Upload docs artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: docs-build
-        path: docs/
-        retention-days: 1
-
   # Deploy to GitHub Pages
   deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    needs: [build, build-docs]
+    needs: [build]
     
     steps:
     - name: Checkout
@@ -89,19 +63,18 @@ jobs:
         name: app-build
         path: .next/
         
-    - name: Download docs artifacts
-      uses: actions/download-artifact@v4
-      with:
-        name: docs-build
-        path: docs/
-        
     - name: Setup Pages
       uses: actions/configure-pages@v4
       
     - name: Create static site
       run: |
         mkdir -p public
-        cp -r docs/* public/
+        # Copy the root index.html to public
+        cp index.html public/
+        # Copy docs/index.html to public/docs/
+        mkdir -p public/docs
+        cp docs/index.html public/docs/
+        # Create a simple redirect from root to docs
         echo "<!DOCTYPE html><html><head><title>Aran API Sentinel</title><meta http-equiv='refresh' content='0;url=/docs/'></head><body>Redirecting to documentation...</body></html>" > public/index.html
         
     - name: Upload site
