--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,8 +3,6 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 permissions:
   contents: read
@@ -16,66 +14,32 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  # Build and test the application
-  build:
-    runs-on: ubuntu-latest
-    
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-      
-    - name: Setup Bun
-      uses: oven-sh/setup-bun@v1
-      with:
-        bun-version: latest
-        
-    - name: Install dependencies
-      run: bun install
-      
-    - name: Run tests
-      run: bun test
-      
-    - name: Build application
-      run: bun run build
-      
-    - name: Upload build artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: app-build
-        path: .next/
-        retention-days: 1
-
-  # Deploy to GitHub Pages
   deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    needs: [build]
     
     steps:
     - name: Checkout
       uses: actions/checkout@v4
       
-    - name: Download app artifacts
-      uses: actions/download-artifact@v4
-      with:
-        name: app-build
-        path: .next/
-        
     - name: Setup Pages
       uses: actions/configure-pages@v4
       
     - name: Create static site
       run: |
         mkdir -p public
-        # Copy the root index.html to public
+        # Copy the beautiful landing page to root
         cp index.html public/
-        # Copy docs/index.html to public/docs/
+        # Copy the comprehensive documentation
         mkdir -p public/docs
         cp docs/index.html public/docs/
-        # Create a simple redirect from root to docs
-        echo "<!DOCTYPE html><html><head><title>Aran API Sentinel</title><meta http-equiv='refresh' content='0;url=/docs/'></head><body>Redirecting to documentation...</body></html>" > public/index.html
+        # Create a simple README
+        echo "# Aran API Sentinel" > public/README.md
+        echo "API Security & Governance Platform" >> public/README.md
+        echo "" >> public/README.md
+        echo "Visit: https://radhi1991.github.io/aran/" >> public/README.md
         
     - name: Upload site
       uses: actions/upload-pages-artifact@v3
@@ -84,4 +48,4 @@ jobs:
         
     - name: Deploy to GitHub Pages
       id: deployment
-      uses: actions/deploy-pages@v4 
+      uses: actions/deploy-pages@v4
