Add multi-tenant subdomain authentication with organization selection

--- a/package.json
+++ b/package.json
@@ -21,9 +21,14 @@
     "test:coverage": "bun test --coverage",
     "test:ai-router": "bun run --bun scripts/test-ai-router.ts",
     "db:seed": "bun run --bun scripts/seed-database.ts",
+    "setup:companies": "bun run --bun scripts/setup-companies.ts",
     "db:migrate": "bun run --bun scripts/migrate-database.ts",
     "api:generate": "bun run --bun scripts/generate-api-client.ts",
     "security:scan": "bun run --bun scripts/security-scan.ts",
+    "security:audit": "npm audit",
+    "security:audit:fix": "npm audit fix",
+    "security:update": "npm update",
+    "security:check": "npm audit && snyk test",
     "performance:test": "bun run --bun scripts/performance-test.ts",
     "deploy:staging": "bun run --bun scripts/deploy-staging.ts",
     "deploy:production": "bun run --bun scripts/deploy-production.ts",
