--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "typecheck": "bun run --bun tsc --noEmit",
     "pocketbase": "./scripts/start-pocketbase.sh",
     "dev:full": "bun run --bun concurrently \"npm run pocketbase\" \"npm run dev\"",
-    "docs:dev": "bun run --bun fumadocs-mdx dev",
     "docs:build": "bun run --bun node scripts/build-docs-simple.js",
-    "docs:preview": "bun run --bun fumadocs-mdx preview",
     "panda:codegen": "bun run --bun panda codegen",
     "panda:css": "bun run --bun panda cssgen",
     "test": "bun test",
@@ -22,6 +20,17 @@
     "test:ai-router": "bun run --bun scripts/test-ai-router.ts",
     "db:seed": "bun run --bun scripts/seed-database.ts",
     "setup:companies": "bun run --bun scripts/setup-companies.ts",
+    "setup:pocketbase": "bun run --bun scripts/setup-pocketbase.ts",
+    "create:collections": "bun run --bun scripts/create-collections.ts",
+    "setup:admin": "bun run --bun scripts/setup-pocketbase-admin.ts",
+    "create:admin": "bun run --bun scripts/create-admin.ts",
+    "create:collections:direct": "bun run --bun scripts/create-collections-direct.ts",
+    "setup": "bun run --bun scripts/setup-complete.ts",
+        "setup:podman": "bun run --bun scripts/setup-podman.ts",
+    "setup:admin": "bun run --bun scripts/setup-pocketbase-admin.ts",
+    "setup:companies": "bun run --bun scripts/setup-companies.ts",
+    "create:admin": "bun run --bun scripts/create-admin.ts",
+    
     "db:migrate": "bun run --bun scripts/migrate-database.ts",
     "api:generate": "bun run --bun scripts/generate-api-client.ts",
     "security:scan": "bun run --bun scripts/security-scan.ts",
@@ -64,7 +73,6 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
-    "fumadocs-mdx": "^11.7.3",
     "js-yaml": "^4.1.0",
     "lucide-react": "^0.475.0",
     "mime-types": "^2.1.35",
@@ -87,6 +95,7 @@
   "devDependencies": {
     "@pandacss/dev": "^0.40.0",
     "@pandacss/preset-base": "^0.40.0",
+    "@tailwindcss/postcss": "4.1.11",
     "@types/js-yaml": "^4.0.9",
     "@types/mime-types": "^2.1.4",
     "@types/node": "^20",
@@ -94,8 +103,10 @@
     "@types/react-dom": "^18",
     "@types/swagger-ui-react": "^5.0.0",
     "@types/uuid": "^9.0.8",
+    "autoprefixer": "10.4.21",
     "concurrently": "^9.2.0",
-    "postcss": "^8",
+    "postcss": "8.5.6",
+    "tailwindcss": "4.1.11",
     "typescript": "^5"
   },
   "engines": {
