--- a/.gitignore
+++ b/.gitignore
@@ -85,7 +85,12 @@ jspm_packages/
 
 # dotenv environment variables file
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 .env.test
+env.example
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -123,6 +128,24 @@ temp/
 # Database
 data/
 uploads/
+pb_data/
+
+# PocketBase
+pocketbase/
+*.db
+*.db-journal
+
+# Backups
+backups/
+*.backup
+
+# Sensitive Files
+*.key
+*.pem
+*.p12
+*.pfx
+secrets/
+credentials/
 
 # Local development
 .env.local
@@ -130,3 +153,9 @@ uploads/
 .env.test.local
 .env.production.local
 
+# Bun
+bun.lockb
+
+
+
+scripts/create-admin.ts
